force-app/main/default/objects/Revisiones_Checklist__c/Revisiones_Checklist__c.object-meta.xml
<CustomObject>
    <label>Revisiones_Checklist</label>
    <nameField>
        <displayFormat>RevCH-{00000}</displayFormat>
        <label>IdRevCheck</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisiones_Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>