force-app/main/default/objects/Revisiones_Checklist__c/fields/CHECKLIST__c.field-meta.xml
<CustomField>
    <fullName>CHECKLIST__c</fullName>
    <label>CHECKLIST</label>
    <referenceTo>CHECKLIST__c</referenceTo>
    <relationshipLabel>Revisiones_Checklist</relationshipLabel>
    <relationshipName>Revisiones_Checklist</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>