force-app/main/default/objects/Revisiones_Checklist__c/fields/Clausula__c.field-meta.xml
<CustomField>
    <fullName>Clausula__c</fullName>
    <label>Clausula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>