force-app/main/default/objects/Revisiones_Checklist__c/fields/Entidad__c.field-meta.xml
<CustomField>
    <fullName>Entidad__c</fullName>
    <label>Entidad Originaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>