force-app/main/default/objects/Revisiones_Checklist__c/fields/Entidad_Actual__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Actual__c</fullName>
    <label>Entidad Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>