force-app/main/default/objects/Revisiones_Checklist__c/fields/Impacto_economico__c.field-meta.xml
<CustomField>
    <fullName>Impacto_economico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impacto económico</label>
    <type>Checkbox</type>
</CustomField>