force-app/main/default/objects/Revisiones_Checklist__c/fields/Informe1__c.field-meta.xml
<CustomField>
    <fullName>Informe1__c</fullName>
    <label>Informe1 Apoyo Jurídico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>