force-app/main/default/objects/Revisiones_Checklist__c/fields/Informe2__c.field-meta.xml
<CustomField>
    <fullName>Informe2__c</fullName>
    <label>Informe2 Requisitos Reclamación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>