force-app/main/default/objects/Revisiones_Checklist__c/fields/LaContiene__c.field-meta.xml
<CustomField>
    <fullName>LaContiene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>La Contiene</label>
    <type>Checkbox</type>
</CustomField>