force-app/main/default/objects/Revisiones_Checklist__c/fields/LOCALIZACION__c.field-meta.xml
<CustomField>
    <fullName>LOCALIZACION__c</fullName>
    <label>LOCALIZACION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>