force-app/main/default/objects/Revisiones_Checklist__c/fields/Revisiones__c.field-meta.xml
<CustomField>
    <fullName>Revisiones__c</fullName>
    <label>Revisiones</label>
    <referenceTo>Revisiones__c</referenceTo>
    <relationshipLabel>Revisiones_Checklist</relationshipLabel>
    <relationshipName>Revisiones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>